// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpriteSelectorItemComponent matches snapshot when given a number and details to show 1`] = `
<div
  className="ponies undefined"
>
  <button
    aria-pressed={true}
    className="react-contextmenu-wrapper"
    onClick={[MockFunction]}
    onContextMenu={[Function]}
    onMouseDown={[Function]}
    onMouseOut={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <div>
      5
    </div>
    <div>
      <div>
        <img
          draggable={false}
          loading="lazy"
          src="https://scratch.mit.edu/foo/bar/pony"
        />
      </div>
    </div>
    <div>
      <div
        title="Pony sprite"
      >
        Pony sprite
      </div>
      <div>
        480 x 360
      </div>
    </div>
  </button>
  <button
    aria-label="Delete"
    className=""
    disabled={false}
    onClick={[MockFunction]}
    tabIndex={0}
    type="button"
  >
    <div>
      <img
        alt="Delete"
        draggable={false}
        src="test-file-stub"
      />
    </div>
  </button>
  <nav
    className="react-contextmenu"
    onContextMenu={[Function]}
    onMouseLeave={[Function]}
    role="menu"
    style={
      {
        "opacity": 0,
        "pointerEvents": "none",
        "position": "fixed",
      }
    }
    tabIndex="-1"
  >
    <div
      aria-disabled="false"
      aria-orientation={null}
      className="react-contextmenu-item"
      onClick={[Function]}
      onMouseLeave={[Function]}
      onMouseMove={[Function]}
      onTouchEnd={[Function]}
      role="menuitem"
      tabIndex="-1"
    >
      <svg
        aria-hidden={true}
        className="lucide lucide-trash2 lucide-trash-2"
        fill="none"
        height={16}
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={1.75}
        viewBox="0 0 24 24"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 11v6"
        />
        <path
          d="M14 11v6"
        />
        <path
          d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
        />
        <path
          d="M3 6h18"
        />
        <path
          d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
        />
      </svg>
      <span>
        delete
      </span>
    </div>
  </nav>
</div>
`;

exports[`SpriteSelectorItemComponent matches snapshot when selected 1`] = `
<div
  className="ponies undefined"
>
  <button
    aria-pressed={true}
    className="react-contextmenu-wrapper"
    onClick={[MockFunction]}
    onContextMenu={[Function]}
    onMouseDown={[Function]}
    onMouseOut={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
    type="button"
  >
    <div>
      <div>
        <img
          draggable={false}
          loading="lazy"
          src="https://scratch.mit.edu/foo/bar/pony"
        />
      </div>
    </div>
    <div>
      <div
        title="Pony sprite"
      >
        Pony sprite
      </div>
    </div>
  </button>
  <button
    aria-label="Delete"
    className=""
    disabled={false}
    onClick={[MockFunction]}
    tabIndex={0}
    type="button"
  >
    <div>
      <img
        alt="Delete"
        draggable={false}
        src="test-file-stub"
      />
    </div>
  </button>
  <nav
    className="react-contextmenu"
    onContextMenu={[Function]}
    onMouseLeave={[Function]}
    role="menu"
    style={
      {
        "opacity": 0,
        "pointerEvents": "none",
        "position": "fixed",
      }
    }
    tabIndex="-1"
  >
    <div
      aria-disabled="false"
      aria-orientation={null}
      className="react-contextmenu-item"
      onClick={[Function]}
      onMouseLeave={[Function]}
      onMouseMove={[Function]}
      onTouchEnd={[Function]}
      role="menuitem"
      tabIndex="-1"
    >
      <svg
        aria-hidden={true}
        className="lucide lucide-trash2 lucide-trash-2"
        fill="none"
        height={16}
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={1.75}
        viewBox="0 0 24 24"
        width={16}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 11v6"
        />
        <path
          d="M14 11v6"
        />
        <path
          d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
        />
        <path
          d="M3 6h18"
        />
        <path
          d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
        />
      </svg>
      <span>
        delete
      </span>
    </div>
  </nav>
</div>
`;
